--- a/team.html
+++ b/team.html
@@ -4,6 +4,10 @@
     <title>Space Design | Team</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="javascripts/modal.js">
+
+    </script>
     <meta charset="UTF-8">
   </head>
   <body>
@@ -11,7 +15,7 @@
         <h1>
            <a href="index.html">
             Space Design
-          </a> 
+          </a>
          </h1>
       <nav>
         <ul>
@@ -28,31 +32,69 @@
         <p>This is some placeholder text</p>
         <ul>
           <li>
-            <a href="">
+            <a href="#">
               <img src="img/img_kevin.jpg" alt="Kevin">
               Kevin
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="img/img_kevin.jpg" alt="Kevin">
+              <h3>Kevin</h3>
+              <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+              </p>
+            </div>
+            <div class="modal_layer"></div>
           </li>
 
           <li>
-            <a href="">
+            <a href="#">
               <img src="img/img_louis.jpg" alt="Louis">
               Louis
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="img/img_Louis.jpg" alt="Louis">
+              <h3>Louis</h3>
+              <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+              </p>
+            </div>
+            <div class="modal_layer"></div>
+
           </li>
           <li>
 
-            <a href="">
+            <a href="#">
               <img src="img/img_kasper.jpg" alt="Kasper">
               Kasper
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="img/img_kasper.jpg" alt="Kasper">
+              <h3>Kasper</h3>
+              <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+              </p>
+            </div>
+            <div class="modal_layer"></div>
+
           </li>
 
           <li>
-            <a href="">
+            <a href="#">
               <img src="img/img_chris.jpg" alt="Chris">
               Chris
             </a>
+            <div class="modal">
+              <a class="close" href="#">Close</a>
+              <img src="img/img_chris.jpg" alt="Chris">
+              <h3>Chris</h3>
+              <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+              </p>
+            </div>
+            <div class="modal_layer"></div>
           </li>
         </ul>
 
@@ -67,7 +109,7 @@
         <li><a href="#" class="facebook">Facebook</a></li>
         <li><a href="#" class="email">Email</a></li>
         <li><a href="#" class="instagram">Instagram</a></li>
-      </ul> 
+      </ul>
 
     </footer>
   </body>
